--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <p>
-        My Portfolio Website has moved. Please visit <a href="https://baopham.dev/">baopham.dev</a>
-    </p>
+    <center>
+        <h1>
+            My Portfolio Website has moved. Please visit <a href="https://baopham.dev/">baopham.dev</a>
+        </h1>
+    </center>
 
     <script src="" async defer></script>
 </body>
